change my code